tests/neg-custom-args/captures/i25758-in-package/B_2.scala
package ttt
object Test uses A, Console:
  def test =
    val leak: String -> Unit = (secret: String) => // error
      A.println(secret)
